# forge-steel

./: .gitignore  .gitmodules  DEVELOPMENT.md  Makefile.am  Makefile.dev  PKGBUILD  README.md  compile_flags.txt  configure.ac  default.cfg
.github/workflows/: ci.yml
config/: forge.cfg  shaders.cfg
default/: forge_project.cfg  frag0.glsl  frag1.glsl  frag10.glsl  frag2.glsl  frag3.glsl  frag4.glsl  frag5.glsl  frag6.glsl  frag7.glsl  frag8.glsl  frag9.glsl  inc_cp437.glsl  inc_debug.glsl  inc_functions.glsl  inc_fx.glsl  inc_magic.glsl  inc_rand.glsl  inc_res.glsl  inc_sentences.glsl  inc_src.glsl  inc_template.glsl  inc_time.glsl  inc_yuv.glsl  inc_yuyv.glsl
docs/: forge.drawio
glad/include/glad/: gl.h
images/: forge.drawio
include/: linmath.h  log.h
include/glad/: egl.h  gl.h
sample/: forge_project.cfg  frag1.glsl  frag2.glsl
scripts/: sentences.py
shaders/: frag.glsl  frag0.glsl  frag1.glsl  frag10.glsl  frag2.glsl  frag3.glsl  frag4.glsl  frag5.glsl  frag6.glsl  frag7.glsl  frag8.glsl  shaders.cfg
src/: args.c  args.h  arr.c  arr.h  config.h  config_file.c  config_file.h  constants.h  file.c  file.h  forge.c  forge.h  glfw.h  logs.h  main.c  main.h  midi.c  midi.h  project.c  project.h  rand.c  rand.h  shaders.c  shaders.h  shared.c  shared.h  state.c  state.h  string.c  string.h  strings.c  strings.h  tempo.c  tempo.h  timer.c  timer.h  types.h  video.c  video.h  window.c  (+1 more)
