AC_INIT([forge], [steel-0.0.0], [klemek.dev@proton.me])
AM_INIT_AUTOMAKE
AC_PROG_CC

AC_CHECK_HEADERS([stdbool.h])
AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([stdlib.h])

AC_CHECK_HEADERS([sys/ioctl.h])
AC_CHECK_HEADERS([sys/mman.h])
AC_CHECK_HEADERS([sys/stat.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([sys/types.h])
AC_CHECK_HEADERS([sys/wait.h])

AC_CHECK_HEADERS([errno.h])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([limits.h])
AC_CHECK_HEADERS([math.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([time.h])
AC_CHECK_HEADERS([unistd.h])

AC_CHECK_HEADERS([linux/videodev2.h])

AC_CHECK_HEADERS([alsa/rawmidi.h])

AC_CHECK_HEADERS([GLFW/glfw3.h])
AC_CHECK_HEADERS([GLFW/glfw3native.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT